--- a/typescript/graphql-fastify/package.json
+++ b/typescript/graphql-fastify/package.json
@@ -6,7 +6,7 @@
     "dev": "ts-node-dev --no-notify --respawn --transpile-only src/server"
   },
   "dependencies": {
-    "@prisma/client": "2.29.0",
+    "@prisma/client": "2.30.0-dev.11",
     "fastify": "3.20.1",
     "graphql": "15.5.1",
     "graphql-scalars": "1.10.0",
@@ -15,9 +15,9 @@
   },
   "devDependencies": {
     "@types/node": "16.4.13",
-    "typescript": "4.3.5",
+    "prisma": "2.30.0-dev.11",
     "ts-node": "10.2.0",
     "ts-node-dev": "1.1.8",
-    "prisma": "2.29.0"
+    "typescript": "4.3.5"
   }
 }
