--- a/typescript/rest-nextjs-express/frontend/package.json
+++ b/typescript/rest-nextjs-express/frontend/package.json
@@ -12,6 +12,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "2.30.0-dev.11",
     "next": "^10.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/node": "14.17.0",
     "@types/react": "17.0.17",
+    "prisma": "2.30.0-dev.11",
     "ts-node": "10.2.0",
     "typescript": "4.3.5"
   }
