--- a/typescript/script/package.json
+++ b/typescript/script/package.json
@@ -5,11 +5,11 @@
     "dev": "ts-node ./script.ts"
   },
   "dependencies": {
-    "@prisma/client": "2.29.0",
+    "@prisma/client": "2.30.0-dev.11",
     "@types/node": "13.13.52"
   },
   "devDependencies": {
-    "prisma": "2.29.0",
+    "prisma": "2.30.0-dev.11",
     "ts-node": "10.2.0",
     "typescript": "4.3.5"
   }
