--- a/deployment-platforms/heroku/package.json
+++ b/deployment-platforms/heroku/package.json
@@ -8,10 +8,10 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "@prisma/client": "2.29.0",
+    "@prisma/client": "2.30.0-dev.11",
     "body-parser": "1.19.0",
     "express": "4.17.1",
-    "prisma": "2.29.0"
+    "prisma": "2.30.0-dev.11"
   },
   "devDependencies": {}
 }
